--- a/application.yml
+++ b/application.yml
@@ -5,4 +5,4 @@ eureka:
     fetch-registry: true
     register-with-eureka: true
     service-url:
-      defaultZone: http://localhost:9005/eureka
+      defaultZone: http://localhost:9005
